2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp: Update paths.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Get ready for 0.3 release.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/RepositoryRegistry.cs: Make sure RegisterRepository
	  always returns a reference to the new repo.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp: Minor fix.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Mono.Addins.Setup.mdp, Makefile.am: Sign the
	  assembly.
	* Mono.Addins.Setup/ConsoleAddinInstaller.cs: New IAddinInstaller
	  implementation.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.ProgressMonitoring/ConsoleProgressMonitor.cs,
	  Mono.Addins.Setup.ProgressMonitoring/ProgressStatusMonitor.cs,
	  Mono.Addins.Setup.ProgressMonitoring/NullProgressMonitor.cs,
	  Mono.Addins.Setup/IProgressMonitor.cs: Track api changes.
	* Mono.Addins.Setup/SetupService.cs, Mono.Addins.Setup/AddinStore.cs:
	  Added new overload for ResolveDependencies.
	* Mono.Addins.Setup/SetupTool.cs: Added new CheckInstall command. Fixed
	  some issues with add-in id comparison.
	* Mono.Addins.Setup/AddinRepositoryEntry.cs,
	  Mono.Addins.Setup/RepositoryRegistry.cs: When looking for
	  installable add-ins, sort the result by version number. Some fix in
	  the code that compares ids.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/SetupService.cs: When creating a package,
	  generating a valid file name when the add-in doesn't have an ID.
	  Fixed the generated html page. Don't add the go-mono repository by
	  default.
	* Mono.Addins.Setup/AddinInfo.cs: Generate a better default name when
	  not provided.
	* Mono.Addins.Setup/RepositoryRegistry.cs: Added method for registering
	  a repository without updating it.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.